# SMB

./: .gitignore  README.md  pyproject.toml  requirements.txt  sample_experiments_parameters.yaml  setup.cfg  setup.py  train.ipynb  train.py  tutorial.ipynb  utils.py
paper/: reproducing_paper.py
smb/: __init__.py  smb.py  utils.py
source/scripts/: plot_experiments.py  run_experiments.py
source/smbexperiments/: __init__.py  experimentlogger.py  getsetupresults.py
source/smbexperiments/experimentconfigurations/: debug_experiment_parameters.yaml  paper_benchmarks.yaml
source/smbexperiments/localtypes/: testoptimizers.py  trainingsettings.py  trainingsetups.py
source/smbexperiments/utils/: __init__.py  datatools.py  metrics.py  networks.py  outputs.py
source/smbsolve/: smb.py
