[metadata]
name = SMB
version = 0.1.0
maintainer = Gönenc Onay
author_email = gonenc@posteo.de
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    License :: MIT
    Programming Language :: Python :: 3


[options]
python_requires = >= 3.8, <4
package_dir =
    =source
zip_safe = True
include_package_data = True
install_requires =
    matplotlib>=3.4.3
    numpy>=1.21.4
    PyYAML>=6.0
    torch==1.13.0
    torchvision==0.14.0
    sls @ git+https://github.com/IssamLaradji/sls.git

[options.packages.find]
where=source

[options.package_data]
smbexperiments=experimentconfigurations/*.yaml
* = README.md

[options.entry_points]
console_scripts =
    dummy_smb_experiments = scripts.run_experiments:dummy_test_smb
    run_smb_experiments = scripts.run_experiments:run_experiments
    plot_smb_experiments= scripts.plot_experiments:plot_results_from_jsons
    reproduce_smb_paper= scripts.run_experiments:reproduce_paper
